--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 /* Utilities */
 body{
     font-family: 'Rubik Mono One', sans-serif;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .full-page{
@@ -53,10 +54,43 @@ body{
 
 /* Text */
 
+/* nav */
+.main-menu{
+    position: fixed;
+    z-index: 2;
+    right: 10px;
+    top: 80px;
+    display: inline-block;
+}
+
+.main-menu ul li{
+    position: relative;
+    margin-right: 40px;
+    list-style-type: none;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    box-shadow: 10px 5px 100px 2px #000;
+}
+
+.main-menu ul li a{
+    /* width: 100%;
+    height: 100%; */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-decoration: none;
+    color: #000;
+    display: inline-block;
+    font-size: 20px;
+}
+
 /* Main */
 .full-page{
     position: relative;
-    
 }
 
 .page-red-img{
